# way-thumbsense

./: ARCHITECTURE.md  Cargo.toml  README.md  REQUIREMENTS.md  vxj86u369j.tmp
examples/: check_devices.rs  debug_events.rs  watch_events.rs
src/: lib.rs  main.rs  tracker.rs
src/core/: mapper.rs  mod.rs  types.rs
src/input/: evdev_input.rs  mod.rs
src/output/: mod.rs  uinput.rs
