[package]
name = "way-thumbsense"
version = "0.1.0"
edition = "2021"
description = "ThumbSense implementation for Linux/Wayland"
license = "MIT"

[dependencies]
evdev = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
anyhow = "1"

[dev-dependencies]
# テスト用（現時点では追加依存なし）
